# Sadidauto-Dofus-Retro-Bot

./: .gitignore  LICENSE  README.md  acg_bot.py  bank.py  bot.py  cmd_line_parser.py  combat.py  data.py  detection.py  game_window.py  gamewindow.py  logger.py  main.py  pop_up.py  pyproject.toml  requirements.txt  threading_tools.py  window_capture.py
data/images/: __init__.py
data/images/bank/: __init__.py
data/images/combat/: __init__.py
data/images/interface/: __init__.py
data/images/monster/: __init__.py
data/images/status/: __init__.py
data/scripts/: __init__.py
data/scripts/af_anticlock/: __init__.py  combat_cast.py  map_banking.py  map_hunting.py
data/scripts/af_clockwise/: combat_movement.py  map_banking.py  map_hunting.py
oflex_bot_dofus/state/: botstate_enum.py  fighting.py
src/: __main__.py  bank.py  bot.py  cmd_line_parser.py  combat.py  detection.py  disturbance_checker.py  game_window.py  image_detection.py  interfaces.py  log_listener.py  logger.py  main.py  map_changer.py  pop_up.py  rectangle_detection.py  screen_capture.py  tooltip_detection.py  utilities.py  window_capture.py
src/bot/: _disturbance_checker.py  _exceptions.py  _initializer.py  _states_enum.py  bot.py  disturbance_checker.py  initializer.py  interfaces.py  main_controller.py  main_states_enum.py
src/data/: __init__.py
src/initializer/: initializer.py
src/map_changer/: map_changer.py
src/ocr/: ocr.py
src/state/: banking.py  botstate_enum.py  controller.py  fighting.py  hunting.py  initializing.py  moving.py  preparing.py
src/tesserocr/: ocr.py  tesserocr-2.6.0-cp310-cp310-win_amd64.whl
src/utilities/: general.py  image_detection.py  screen_capture.py
state/: __init__.py  banking.py  controller.py  fighting.py  hunting.py  initializing.py  moving.py  preparing.py
tests/test_map_changer/: test_map_changer.py
tests/test_pods_reader/: test_pods_reader.py
(+290 files in other folders)
