[tool.poetry]
name = "oflex-bot-dofus"
version = "1.0.0"
description = ""
authors = ["ephell"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.7"
keyboard = "^0.13.5"
pynput = "^1.7.6"
pyautogui = "^0.9.54"
numpy = "^1.26.2"
tesserocr = { file = "src\\ocr\\tesserocr-2.6.0-cp311-cp311-win_amd64.whl" }
opencv-python = "^4.8.1.78"
scikit-learn = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
